--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "type": "git",
     "url": "git+https://github.com/comp426-2023-spring/a02-functions-camburhans.git"
   },
+  "bin": {
+    "galosh.js": "./cli.js"
+  },
   "author": "Cameron Burhans",
   "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/comp426-2023-spring/a02-functions-camburhans/issues"
   },
-  "homepage": "https://github.com/comp426-2023-spring/a02-functions-camburhans#readme"
+  "homepage": "https://github.com/comp426-2023-spring/a02-functions-camburhans#readme",
+  "dependencies": {
+    "minimist": "^1.2.8",
+    "moment-timezone": "^0.5.43",
+    "node-fetch": "^3.3.1"
+  }
 }
